# demoblaze

./: .gitignore  Dockerfile  conftest.py  pyproject.toml
allure-results/: 05db680c-c5a0-4d47-be70-8e264a656775-container.json  0c177b69-b62d-4a93-83c7-86448befceab-container.json  101f16ab-4472-4b67-abae-5fbbc95d52bf-container.json  1b2df131-96b6-4b9a-ab3a-ffeaa3e3190a-result.json  261b238d-12ab-450d-8190-3d3dec4a0003-container.json  37cebef1-7de9-4c7a-b504-8eebdcb4be83-container.json  3bd96b93-2dac-4732-9583-722a88a6ce43-container.json  3d5a4d90-02f9-4da7-883b-33dc343bb232-container.json  5b9e8c5a-8921-4819-91a3-76d13e561751-container.json  74360e0b-000d-4951-a0bd-c1c99ed119db-container.json  8522f069-72e5-43a9-8b13-0fdedbb21a65-container.json  8688a789-96a1-4ac0-97dd-7812e3e05f2b-container.json  9bd2713f-a853-4f4b-acd7-b6645908e8ef-container.json  9c1be065-3953-4718-8a9d-1f5d90615eaa-result.json  a475a628-cfea-4b79-b288-27fff489a008-container.json  a8118502-0c21-4634-8a62-53ef7c7df653-result.json  abd77256-495f-4972-9e48-5d4b91906221-container.json  af16a80c-4c87-4532-8c12-600ed2f54ebd-result.json  b7a61d68-794c-4edf-b891-530db2e893db-container.json  c3a6cfe0-9ec9-4960-a7ff-babeeec21fa0-container.json  c4f13ed7-40f5-45d9-ade9-9d92a16d5ed9-container.json  cfcc84bb-5a66-4172-9b0b-9a1090184e36-result.json  d7ac6cbf-b507-4dfb-a03c-ec9130a6c6ba-result.json  daa8351c-a2f8-45d4-8a57-1ebeb0716e32-container.json  e4c6a821-2701-4ec4-b597-992bd6940872-container.json  f3debcea-a266-425f-80a8-a9ba90399f07-container.json
src/ui/pages/: base_page.py  (+3 more)
tests/: test_buy_products.py
(+3 files in other folders)
